# ansible_sandbox

./: .gitignore  pyproject.toml
ansible/: ansible.cfg  deploy_google_cloud_function.sh  playbook_deploy_google_cloud_function.yml
ansible/tasks/: archive-cloud-function.yml  ensure-google-cloud-function-exists.yml  remove-cloud-functions-archive.yml  upload-object-to-gcs.yml
ansible/vars/: auth.yml  cloud_functions.yml  common.yml
cloud_functions/: main.py  pyproject.toml  requirements.txt
