[tool.poetry]
name = "ansible_sandbox"
version = "0.1.0"
description = "Practice with Ansible and CAnsible Cloud Modules"
authors = ["Noland Seigler <57370691+nolandseigler@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9.13"
requests = "^2.24.0"
google-auth = "^1.21.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
ansible-lint = "^4.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
